<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RelativeLayout
                android:background="@color/white"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="24dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/Enter_item"
                    android:text="@string/enter_item"
                    android:textSize="20dp"
                    android:textStyle="bold"
                    android:layout_centerHorizontal="true">

                </TextView>
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/enter_item"
                    android:hint="@string/enter_item"
                    android:layout_below="@+id/Enter_item"
                    android:textColor="@color/black">

                </EditText>
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/quantity"
                    android:inputType="number"
                    android:hint="@string/enter_quantity"
                    android:layout_below="@+id/enter_item"
                    android:textColor="@color/black">

                </EditText>
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/colour"
                    android:hint="@string/colour"
                    android:layout_below="@+id/quantity"
                    android:textColor="@color/black">


                </EditText>
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:id="@+id/size"
                    android:hint="@string/size"
                    android:layout_below="@+id/colour"
                    android:textColor="@color/black">

                </EditText>
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/size"
                    android:id="@+id/save_button"
                    android:text="@string/save"
                    android:background="@color/purple_200">

                </Button>





            </RelativeLayout>

        </androidx.cardview.widget.CardView>









</LinearLayout>