<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="23dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="15dp">

            <TextView
                android:id="@+id/confirm_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginTop="10dp"
                android:padding="10dp"
                android:text="@string/confirm_txt"
                android:textSize="15sp"
                android:textStyle="bold">

            </TextView>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/no_button"
                android:layout_below="@+id/confirm_txt"
                android:layout_marginTop="30dp"
                android:text="@string/no_button">

            </Button>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/yes_button"
                android:layout_below="@+id/confirm_txt"
                android:layout_marginTop="30dp"
                android:text="@string/yes_button"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true">

            </Button>


        </RelativeLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>